# c2b-dashboard

./: README.md  pyproject.toml
dashboard/: streamlit_app.py
dashboard/components/: __init__.py  basket_analysis.py  combined_promotion_chart.py  monthly_sales_chart.py  product_rotation_charts.py  product_rotation_processor.py  products_sold_unsold.py  promotion_chart.py  promotion_metrics.py  promotion_revenue_processor.py  promotions_uplift_analysis.py  sales_analysis.py  sales_uplift_analysis.py  total_revenue_quantity.py
dashboard/utils/: __init__.py  auth.py
dashboard/views/: __init__.py  product_view.py  promotion_view.py  sales_view.py
database/: __init__.py  connection.py  export_query_cli.py  query_cache.py  query_executor.py  query_exporter.py  query_repository.py
